--- a/style.css
+++ b/style.css
@@ -84,11 +84,12 @@ div {
 .calculBasJournal{
     text-align: end;
     position: relative;
-    top:-50px;
+    top:-40px;
     font-size: 12px;
     color: grey;
-    height: 20px;
+    height: 5px;
     background-attachment: local, scroll;
+    overflow-x: auto;
 
  }
  body > div > div:nth-child(6) > div:nth-child(3){
